--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="./main.css">
+</head>
+<body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
 <script src="https://unpkg.com/p5.createloop@latest/dist/p5.createloop.js"></script>
-</head>
+<script  src="./main.js"></script>
+</body>
 </html>
